fix: chart lines not visible after trade another token & comeback on initial order symbol

--- a/public/static/themed.css
+++ b/public/static/themed.css
@@ -35,20 +35,7 @@
   --tv-color-toolbar-toggle-button-background-active-hover: white;
 
   /* MODALS */
-  --tv-color-popup-background: rgb(241, 188, 225);
-  --tv-color-popup-element-text: rgb(136, 24, 79);
-  --tv-color-popup-element-text-hover: rgb(74, 20, 140);
-  --tv-color-popup-element-background-hover: rgb(244, 143, 177);
-  --tv-color-popup-element-divider-background: rgb(251, 223, 244);
-  --tv-color-popup-element-secondary-text: rgb(74, 20, 140);
-  --tv-color-popup-element-hint-text: rgb(74, 20, 140);
-  --tv-color-popup-element-text-active: rgb(6, 6, 255);
-  --tv-color-popup-element-background-active: red;
-  --tv-color-popup-element-toolbox-text: rgb(136, 24, 79);
-  --tv-color-popup-element-toolbox-text-hover: rgb(74, 20, 140);
-  --tv-color-popup-element-toolbox-text-active-hover: rgb(74, 20, 140);
-  --tv-color-popup-element-toolbox-background-hover: rgb(222, 89, 132);
-  --tv-color-popup-element-toolbox-background-active-hover: magenta;
+ 
 }
 
 .theme-light {
